--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "node-authentication",
   "main": "server.js",
+  "scripts": {
+    "savage": "nodemon server.js",
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcrypt-nodejs": "latest",
     "body-parser": "^1.18.3",
@@ -20,5 +24,8 @@
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
     "passport-twitter": "~1.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
